# hello-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  windows-toolchain.cmake
.github/workflows/: coverage.yml  release.yml  test.yml
inc/: config.hpp.in  display.hpp  inputhandler.hpp  operations.hpp
src/: display.cpp  inputhandler.cpp  main.cpp  operations.cpp
tests/: CMakeLists.txt  README.md  run_tests.sh  test_inputhandler.cpp  test_operations.cpp
